--- a/Introduccion/CSS/estilo_eventoAcceso.css
+++ b/Introduccion/CSS/estilo_eventoAcceso.css
@@ -10,6 +10,7 @@ form {
     height: 45%;
     border: 1px solid black;
     text-align: right;
+    box-shadow: 5px 5px 8px grey; 
 }
 
 
@@ -19,7 +20,7 @@ form input{
     margin-right: 1%; 
     margin-bottom: 2.5%;
     border: 1px solid black;
-    box-shadow: 60px; 
+    
 }
 
 button{
@@ -30,6 +31,7 @@ button{
     border-radius: 3px;
     margin-right: 40%;
     width: 10%;
-    margin-bottom: 2.5%;
+    margin-bottom: 5%;
+    font-size: 60%; 
 
 }
