--- a/Introduccion/CSS/estilo_eventoAcceso.css
+++ b/Introduccion/CSS/estilo_eventoAcceso.css
@@ -1,37 +1,33 @@
 h2 {
     text-align: center;
-    color:  white;
+    color: white;
 }
-
 
 form {
     background-color: lightgray;
-    width: 45%;
+    width: 50%;
     height: 45%;
     border: 1px solid black;
     text-align: right;
-    box-shadow: 5px 5px 8px grey; 
+    box-shadow: 5px 5px 8px grey;
 }
 
-
-
-form input{
-    
-    margin-right: 1%; 
+form input {
+    margin-right: 1%;
     margin-bottom: 2.5%;
     border: 1px solid black;
-    
+    box-shadow: inset 1px 1px 1px 1px grey;
+    border-radius: 3px;
 }
 
-button{
+button {
     background-color: blue;
-    color:white;
-    padding:5px;
+    color: white;
+    padding: 1% 2%;
     border: none;
     border-radius: 3px;
     margin-right: 40%;
     width: 10%;
     margin-bottom: 5%;
-    font-size: 60%; 
-
+    font-size: 60%;
 }
