--- a/EjerciciosDOM/CSS/Cuadros.css
+++ b/EjerciciosDOM/CSS/Cuadros.css
@@ -3,7 +3,7 @@
     justify-content: space-around;
 }
 
-#secundario {
+.secundario {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,7 +13,8 @@
     border: 1px solid black;
     width: 300px;
     height: 300px;
-    box-shadow: 3px 3px 10px black;
+    box-shadow: 5px 5px 7px grey;
+   
 }
 
 #rojo {
