--- a/ReproductorVideo/css/reproductorstyle.css
+++ b/ReproductorVideo/css/reproductorstyle.css
@@ -4,4 +4,29 @@ body {
     text-align: center;
 }
 
-#reproductor {}
+#reproductor {
+    display: grid;
+    grid-template-rows: 1fr 3fr 1fr;
+}
+
+#barra {
+    display: grid;
+    grid-template-columns: repeat(7, 80px);
+    justify-content: center;
+    grid-gap: 2%;
+    margin-bottom: 2%;
+    margin-top: 2%;
+}
+
+#listavideos {
+    display: grid;
+    grid-template-rows: repeat(6, 100px);
+    grid-gap: 1%;
+    align-content: space-between;
+}
+
+.videos {
+    border: 1px solid black;
+    margin-right: 25%;
+    margin-left: 15%;
+}
