--- a/ReproductorVideo/css/reproductorstyle.css
+++ b/ReproductorVideo/css/reproductorstyle.css
@@ -24,9 +24,9 @@ body {
 }
 
 #listavideos {
-    display: grid;
-    grid-template-rows: repeat(6, 100px);
-    grid-gap: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     align-content: space-between;
 }
 
