+ haciendo los draggables

--- a/FichajesFutbol/css/estilo.css
+++ b/FichajesFutbol/css/estilo.css
@@ -11,6 +11,7 @@ flex-direction: row;
     background-repeat: no-repeat;
     width: 800px;
     height: 750px;
+ 
 }
 
 #banquillo{
@@ -23,4 +24,9 @@ flex-direction: row;
 
 h1{
     margin-left: 30%;
+}
+
+.jugador img {
+    width: 90px;
+    height: 90px;
 }
