--- a/FichajesFutbol/css/estilo.css
+++ b/FichajesFutbol/css/estilo.css
@@ -2,31 +2,44 @@ body{
 
 display: flex;
 flex-direction: row;
-
+background-image: url("../img/fondo.jpg");
 }
 
 #campo{
+
     background-image: url("../img/campo.jpg");
     background-size: contain;
     background-repeat: no-repeat;
-    width: 800px;
+    width: 510px;
     height: 750px;
- 
+    margin-left: 15%;
 }
 
 #banquillo{
 
+    display: flex;
     height: 700px;
-    width: 500px;
+    width: 400px;
     border: 1px solid black;
+    margin-left:3%;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    
 
 }
 
 h1{
-    margin-left: 30%;
+    margin-left: 3%;
 }
 
-.jugador img {
+.jugador{
+    width: 100px;
+    height: 100px;
+    border: 1px black solid;
+}
+
+img {
     width: 90px;
     height: 90px;
 }
@@ -34,13 +47,18 @@ h1{
 .porteria{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-content: center;
+    margin-top: 3%;
+    margin-bottom: 5%;
 }
 
 
 .defensa{
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    margin-top: 3%;
+    margin-bottom: 5%;
 }
 
 
@@ -48,6 +66,9 @@ h1{
 .centro{
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    margin-top: 10%;
+    margin-bottom: 5%;
 }
 
 
@@ -55,4 +76,13 @@ h1{
 .delantero{
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    margin-top: 10%;
+    margin-bottom: 5%;
+}
+
+.banca{
+    width: 100px;
+    height: 100px;
+    border: 1px black solid;
 }
